--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,11 @@
 :root{
-    --custom-purple: rgb(188, 168, 233);
-    --custom-yellow: #F6F7A9;
+    --custom-purple: #AA96DA;
+    --custom-yellow: #FFFFD2;
+    --custom-green:  #C5FAD5;
 }
 .custom-purple{
     background-color: var(--custom-purple);
 }
 .custom-yellow{
     background-color: var(--custom-yellow);
-}
-.costom-yellow-text{
-    color: var(--custom-yellow);
 }
