--- a/styles/style2.css
+++ b/styles/style2.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body{
-    background-color: var(--custom-yellow);
+    background-color: var(--custom-green);
     margin: 0;
     padding: 0;
 }
